--- a/document-management/document-management-widgetset/src/main/resources/VAADIN/themes/documentManagement/styles.css
+++ b/document-management/document-management-widgetset/src/main/resources/VAADIN/themes/documentManagement/styles.css
@@ -1631,6 +1631,11 @@ div.v-layout.v-horizontal.v-widget {
 	vertical-align: top;
 }
 
+.documentManagement .appTitleLabel {
+	text-align: center !important;
+	font-weight: bold !important;
+}
+
 .documentManagement.v-app, .documentManagement.v-app-loading {
 	font: 300 16px/1.55 "Open Sans", sans-serif;
 	color: #464646;
