Dokumentum letőltés implementálás.

--- a/document-management/document-management-widgetset/src/main/resources/VAADIN/themes/documentManagement/documentManagement.scss
+++ b/document-management/document-management-widgetset/src/main/resources/VAADIN/themes/documentManagement/documentManagement.scss
@@ -2,5 +2,11 @@
 	.appTitleLabel {
 		text-align: center !important;
 		font-weight: bold !important;
-	 }  
+	 }
+	 
+	.component-wrap {
+		width: 100%;
+		text-align: center !important;
+		vertical-align: inherit !important;
+	}
 }
